# event_gatherer

./: .gitignore  pyproject.toml
db/: create_event_gatherer_db.sql
db/app/: app_venues.sql
db/dw/api_football/: dw_api_football.sql  dw_api_football_fixtures.py  dw_api_football_venues.py
db/raw/api_football/: fetch_data_from_football_api.py
tests/: api_football_connection.py
